--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Pesquisador de Países</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
-  <body>
-    <nav class="navbar bg-light">
+  <body class="bg-dark text-white">
+    <nav class="navbar bg-dark">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img src="./logo_dnc_transp4.webp" alt="Bootstrap" width="30" height="24">
+            <img src="./logo_dnc_transp4.webp" alt="Bootstrap" width="100">
           </a>
         </div>
       </nav>
