--- a/index.html
+++ b/index.html
@@ -1,19 +1,52 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pesquisador de Países</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  </head>
-  <body class="bg-dark text-white">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+</head>
+
+<body class="bg-dark text-white">
     <nav class="navbar bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="#">
-            <img src="./logo_dnc_transp4.webp" alt="Bootstrap" width="100">
-          </a>
+            <a class="navbar-brand" href="#">
+                <img src="./logo_dnc_transp4.webp" alt="Bootstrap" width="100">
+            </a>
         </div>
-      </nav>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-  </body>
+    </nav>
+
+    <h1 class="text-center">Pesquisa de Países</h1>
+
+    <!--Botão pesquisar-->
+
+    <div class=" container input-group mb-3">
+        <input type="text" class="form-control" placeholder="Digite aqui o nome do país (em inglês)"
+            aria-label="Recipient's username" aria-describedby="button-addon2">
+        <button class="btn btn-outline-secondary bg-primary text-white" type="button" id="button-addon2"> <strong>
+                Pesquisar </strong> </button>
+    </div>
+
+    <!--Card-->
+
+    <div class="container text-center card text-dark" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title"> Nome </h5>
+        </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item"><strong>Capital: <br></strong><pi id="capital"> Teste </pi></li>
+            <li class="list-group-item"><strong>Continente: <br></strong><pi id="cont"> Teste </pi></li>
+            <li class="list-group-item"><strong>População: <br></strong><pi id="pop"> Teste </pi></li>
+        </ul>
+
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
