--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--Botão pesquisar-->
 
     <div class=" container input-group mb-3">
-        <input type="text" class="form-control" placeholder="Digite aqui o nome do país (em inglês)"
+        <input type="text" class="form-control" placeholder="Digite o nome do país (em inglês)"
             aria-label="Recipient's username" aria-describedby="button-addon2">
         <button class="btn btn-outline-secondary bg-primary text-white" type="button" id="button-addon2"> <strong>
                 Pesquisar </strong> </button>
