--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
     <!--Botão pesquisar-->
 
     <div class=" container input-group mb-3">
-        <input type="text" class="form-control" placeholder="Digite o nome do país (em inglês)"
+        <input type="text" id="pais" class="form-control" placeholder="Digite o nome do país (em inglês)"
             aria-label="Recipient's username" aria-describedby="button-addon2">
-        <button class="btn btn-outline-secondary bg-primary text-white" type="button" id="button-addon2"> <strong>
+        <button onclick="Procurar()" class="btn btn-outline-secondary bg-primary text-white" type="button" id="button-addon2"> <strong>
                 Pesquisar </strong> </button>
     </div>
 
     <!--Card-->
 
-    <div class="container text-center card text-dark" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+    <div id="card" class="container text-center card text-dark p-3" style="width: 18rem;">
+        <img id="bandeira" src="..." class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title"> Nome </h5>
+            <h5 class="card-title" id="nome"> Nome </h5>
         </div>
         <ul class="list-group list-group-flush">
             <li class="list-group-item"><strong>Capital: <br></strong><pi id="capital"> Teste </pi></li>
@@ -47,6 +47,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
